Fix text boxes on iOS Safari/Chrome

--- a/attendance-payment/style.css
+++ b/attendance-payment/style.css
@@ -114,40 +114,40 @@ input {
 
 .input-wrapper {
     position: relative;
-    margin-bottom: 2.5em;
+    margin-bottom: 2em;
     max-width: 60%;
+	padding: 1em 0;
 }
 
 input[type="text"] {
-    z-index: 10;
+	z-index: 10;
     width: 100%;
     min-width: 100%;
-    padding: 1em 20px;
+    padding: 0;
     border-radius: 0;
     background-color: transparent;
-    height: 4em;
-    line-height: 4em;
-    box-sizing: border-box;
-    margin-top: 0.5em;
+	height: 2em;
+	padding: 0em 2em;
+	box-sizing: border-box;
 }
 
 label {
     display: block;
-    margin-bottom: 1em;
     font-size: 0.8em;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     text-align: left;
     line-height: 1em;
+    margin-bottom: 1em;
 }
 
-label::before {
+.input-wrapper::before {
     content: "";
     position: absolute;
-    top: 2em;
+    top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% - 2em);
+    height: 100%;
     background: #222222;
     background-image: radial-gradient(220% 105% at top center, #363640 0%, #272727 40%, #0e0e0e);
     background-attachment: fixed;
@@ -163,12 +163,12 @@ label::before {
     border-radius: 5px;
 }
 
-.input-filled label::before {
+.input-wrapper.input-filled::before {
     -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
     transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
 }
 
-label::after {
+.input-wrapper::after {
     content: '';
     position: absolute;
     bottom: -0.25em;
@@ -187,7 +187,7 @@ label::after {
     transition: transform 0.4s;
 }
 
-.input-filled label::after {
+.input-wrapper.input-filled::after {
     -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
     transform: perspective(1000px) rotate3d(1, 0, 0, 0deg);
 }
